[metadata]
name = treeno
version = attr: treeno.__version__
url = https://github.com/OneRaynyDay/treeno/tree/main/treeno
license = MIT License
license_files = LICENSE
author = Ray Zhang
author_email = peifeng2005@gmail.com
description = Trino SQL building library
description_file = README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    trino, sql, python

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    antlr4-python3-runtime==4.9.2
    nltk==3.6.5
    attrs==21.2.0
    overrides==6.1.0
    click~=8.0.3
    typer~=0.4.0
    requests~=2.26.0
python_requires = >= 3.6
test_suite = tests

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    treeno = treeno.cli:app

[options.extras_require]
test =
    pytest~=6.2.5

docs =
    Sphinx~=4.3.2
    sphinx-autodoc-typehints~=1.15.2
    sphinx-press-theme~=0.8.0

[tool:pytest]
addopts = --doctest-modules
